examples/test/testpolicy15946.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15946
  namespace: namespace467
spec:
  podSelector:
    matchLabels:
      key38: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value3
          key20: value44
          key1: value14
      podSelector:
        matchLabels:
          key20: value31
          key44: value49
          key23: value29
